FIX: Set height on mobile menu to calculated height

--- a/src/components/global/MobileMenu/MobileMenu.scss
+++ b/src/components/global/MobileMenu/MobileMenu.scss
@@ -10,6 +10,7 @@
   &__container {
     width: 100vw;
     height: 100vh;
+    height: var(--vh, 100vh);
     position: absolute;
     top: 0;
     left: 0;
